--- a/js-client/index.css
+++ b/js-client/index.css
@@ -1,3 +1,11 @@
+body {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: Arial;
+}
+
 .barchart {
     font-size: 9px;
     line-height: 15px;
@@ -13,16 +21,17 @@
 }
 
 .barchart .bar {
-    background: #0d4aa5;
+    background: teal;
     padding: 10px 2px 0;
 }
 
 .barchart .label {
     background-color: black;
     margin-top: -30px;
-    padding: 0 3px;
+    padding: 0.1px 5px;
     color: white;
     border-radius: 4px;
+    background: gray;
 }
 
 .minwidth {
