Adjust colors and margins

--- a/js-client/index.css
+++ b/js-client/index.css
@@ -1,8 +1,7 @@
 body {
-    margin-top: 5rem;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /* justify-content: center; */
     font-family: Arial;
 }
 
